--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,27 @@ body{
   margin: 30px 0;
   
 }
+
+
+
+.about-section{
+  display: flex;
+  justify-content: space-evenly;
+  height: 100vh;
+  align-items:center;
+  background-color: rgb(250, 250, 250);
+}
+.about-section .item{
+  width: 600px;
+}
+.about-section .item img{
+  width: 90%;
+  /* margin-top: 60px; */
+}
+.myinformation{
+  padding: 30px 50px;
+  margin-top: 50px;
+  border: 1px solid blanchedalmond;
+  box-shadow: 0px 0px 10px gray;
+  border-radius: 3px;
+}
