services section completed

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,8 @@ body{
 
 
 .skill-section{
-  height: 100vh;
+  min-height: 700px;
+  /* background: red; */
 }
 .skill-section > h2{
   margin-top: 20px;
@@ -137,4 +138,24 @@ body{
 }
 .react{
   width: 10%;
+}
+
+
+
+.services-section{
+  min-height: 700px;
+  /* background: blue; */
+}
+.services-section > h2{
+  text-align: center;
+  font-size: 30px;
+}
+
+.main-content{
+  display: flex;
+  justify-content: space-around;
+}
+
+.item{
+  width: 400px;
 }
